--- a/FishTagsApp/app/src/main/res/layout/activity_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_form.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     android:background="@color/accent_material_dark"
     android:fitsSystemWindows="true"
+    tools:context="bft.fishtagsapp.FormActivity">
 
-/*    <android.support.design.widget.AppBarLayout
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme">
-*/
+
     </android.support.design.widget.AppBarLayout>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -33,12 +34,5 @@
 
     </ScrollView>
 
-    tools:context="bft.fishtagsapp.FormActivity"
-    android:background="@color/backgroundColor">
-
-    <include layout="@layout/content_form" />
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/main_toolbar"/>
 
 </android.support.design.widget.CoordinatorLayout>
