--- a/FishTagsApp/app/src/main/res/layout/content_main.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_main.xml
@@ -13,9 +13,12 @@
     tools:showIn="@layout/activity_main">
 
     <Button
-        style="@style/FormLabelStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Submit Tag Recovery"
         android:onClick="goToForm"
+        android:id="@+id/formBtn" />
+    <Button
         android:id="@+id/scoreBtn"
         android:text="Scoreboard"
         android:layout_width="wrap_content"
@@ -31,17 +34,4 @@
         android:layout_below="@+id/scoreBtn"
         android:onClick="signUp"
         />
-        /*android:id="@+id/button"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:background="@color/buttonColor"/>
-*/
-    <Button
-        style="@style/FormLabelStyle"
-        android:text="Scoreboard"
-        android:layout_marginTop="49dp"
-        android:background="@color/buttonColor"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true" />
 </RelativeLayout>
