--- a/FishTagsApp/app/src/main/res/layout/personal_info_layout.xml
+++ b/FishTagsApp/app/src/main/res/layout/personal_info_layout.xml
@@ -4,6 +4,25 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/newInfo"
+        android:text="Welcome to HITag! Please fill in the following information. At any time, you can change this information in the Settings tab."
+        android:visibility="gone" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/gone"
+        android:text="Please verify the following information:"
+        android:visibility="visible" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/modifyInfo"
+        android:text="Update your information:"
+        android:visibility="gone" />
+
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
