--- a/FishTagsApp/app/src/main/res/values/styles.xml
+++ b/FishTagsApp/app/src/main/res/values/styles.xml
@@ -14,5 +14,9 @@
         <item name="displayOptions">useLogo|showHome</item>
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
+
 
 </resources>
