--- a/FishTagsApp/app/src/main/res/layout/activity_form.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_form.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/accent_material_dark"
     android:fitsSystemWindows="true"
     tools:context="bft.fishtagsapp.FormActivity">
 
@@ -12,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme">
+
+        <include layout="@layout/custom_toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -21,7 +22,6 @@
         android:id="@+id/my_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/highlighted_text_material_dark"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
