--- a/FishTagsApp/app/src/main/res/layout/content_main.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,28 +10,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="bft.fishtagsapp.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:orientation="vertical">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit Tag Recovery"
         android:onClick="goToForm"
-        android:id="@+id/formBtn" />
+        android:visibility="gone"
+        android:id="@+id/formBtn"
+        style="@style/ButtonTheme"/>
+
     <Button
         android:id="@+id/scoreBtn"
         android:text="Scoreboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/formBtn"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        style="@style/ButtonTheme"/>
 
-    <Button
-        android:id="@+id/signUpBtn"
-        android:text="Sign Up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/scoreBtn"
-        android:onClick="signUp"
-        />
-</RelativeLayout>
+</LinearLayout>
