--- a/FishTagsApp/app/src/main/res/layout/tag_info_layout.xml
+++ b/FishTagsApp/app/src/main/res/layout/tag_info_layout.xml
@@ -17,7 +17,8 @@
             android:imeOptions="actionUnspecified"
             android:inputType="textNoSuggestions"
             android:maxLines="1"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textSize="20dp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -32,7 +33,8 @@
             android:hint="@string/prompt_time"
             android:inputType="text|datetime"
             android:maxLines="1"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:textSize="20dp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -85,48 +87,46 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Take a picture of your fish:"/>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/FishPhoto"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/placeholder"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/PhotoButton" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Take a photo..."
+            android:id="@+id/textView4"
+            android:textSize="20dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true" />
 
-        <Button
+        <ImageButton
+            android:src="@android:drawable/ic_menu_camera"
             android:id="@+id/PhotoButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/seaColor"
             android:onClick="goToCamera"
-            android:text="Take Photo"
-            android:textColor="@color/whiteColor"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:layout_marginEnd="62dp"
-            android:layout_alignBottom="@+id/FishPhoto"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/textView4" />
+
+
     </RelativeLayout>
+    <ImageView
+        android:id="@+id/FishPhoto"
+        android:layout_width="66dp"
+        android:layout_height="66dp"
+        android:src="@drawable/placeholder"
+        android:layout_gravity="center_horizontal" />
 
     <Button
+        style="@style/ButtonTheme"
         android:id="@+id/SubmitForm"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:background="@color/seaColor"
         android:onClick="submitForm"
         android:text="Next"
-        android:textColor="@color/whiteColor"
         android:textSize="30dp"
-        android:textStyle="bold" />
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
