--- a/FishTagsApp/app/src/main/res/layout/content_main.xml
+++ b/FishTagsApp/app/src/main/res/layout/content_main.xml
@@ -13,6 +13,11 @@
     tools:showIn="@layout/activity_main"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/welcome"
+        android:text="Welcome to HI TAG!"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,15 +25,6 @@
         android:onClick="goToForm"
         android:visibility="gone"
         android:id="@+id/formBtn"
-        style="@style/ButtonTheme"/>
-
-    <Button
-        android:id="@+id/scoreBtn"
-        android:text="Scoreboard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/formBtn"
-        android:layout_alignParentStart="true"
         style="@style/ButtonTheme"/>
 
 </LinearLayout>
