--- a/FishTagsApp/app/src/main/res/layout/activity_signup.xml
+++ b/FishTagsApp/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".signup.SignupActivity">
+    tools:context=".signup.SignupActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
