--- a/FishTagsApp/app/src/main/res/values/colors.xml
+++ b/FishTagsApp/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">@color/accent_material_light</color>
     <color name="colorPrimaryDark">#3F51B5</color>
     <color name="colorAccent">#FFA000</color>
+    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="windowBackground">#FFFFFF</color>
+    <color name="navigationBarColor">#000000</color>
     <color name="seaColor">@color/accent_material_light</color>
     <color name="whiteColor">@color/abc_primary_text_material_dark</color>
 </resources>
