--- a/FishTagsApp/app/src/main/res/layout/fragment_home.xml
+++ b/FishTagsApp/app/src/main/res/layout/fragment_home.xml
@@ -5,30 +5,13 @@
     android:orientation="vertical">
 
     <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:id="@+id/home"-->
-    <!--android:layout_centerInParent="true"-->
-    <!--android:text="Home"-->
-    <!--android:textSize="40dp"-->
-    <!--android:textStyle="bold" />-->
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:id="@+id/welcome"-->
-    <!--android:text="Welcome!"/>-->
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="To submit a tag, click the Add button at the bottom right."/>-->
-    <TextView
-        android:id="@+id/numCatches"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Home"
-        android:textSize="40dp"
-        android:textStyle="bold" />
+        <!--android:id="@+id/numCatches"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:text="Home"-->
+        <!--android:textSize="40dp"-->
+        <!--android:textStyle="bold" />-->
 
 
 </LinearLayout>
