--- a/FishTagsApp/app/src/main/res/layout/fragment_my_catches.xml
+++ b/FishTagsApp/app/src/main/res/layout/fragment_my_catches.xml
@@ -1,15 +1,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/my_catches"
+    android:name="com.google.android.gms.maps.MapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="bft.fishtagsapp.MyCatchesFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="My Catches"
-        android:textSize="40dp"
-        android:textStyle="bold" />
+    <!--<com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--xmlns:tools="http://schemas.android.com/tools"-->
+        <!--android:id="@+id/map"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--tools:context="bft.fishtagsapp.MyCatchesFragment" />-->
 
 </FrameLayout>
