--- a/FishTagsApp/app/src/main/res/layout/fragment_scoreboard.xml
+++ b/FishTagsApp/app/src/main/res/layout/fragment_scoreboard.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     tools:context="bft.fishtagsapp.ScoreboardFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Scoreboard"
-        android:textSize="40dp"
-        android:textStyle="bold" />
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:text="Scoreboard"-->
+        <!--android:textSize="40dp"-->
+        <!--android:textStyle="bold" />-->
 
 </FrameLayout>
